2012-07-29  Ben Elliston  <bje@gnu.org>

	* uname: Remove.

2012-07-29  Ben Elliston  <bje@gnu.org>

	* config.guess: Remove commented code, circa 1994.

2012-06-17  David Hill  <dhill@mindcry.org>

	* config.guess (*:Bitrig:*:*): New.
	* config.sub (-bitrig*): Likewise.
	* testsuite/config-sub.data: Add a test case.

2012-06-10  Dmitriy Fedchenko <xfedch@gmail.com>
	    Ben Elliston  <bje@gnu.org>

	* config.guess (NSE-?:NONSTOP_KERNEL:*:*): Match NSE-* as the
	substring can be longer than one character.
	* testsuite/config-guess.data: Add a new test case.

2012-05-24  Joe Seymour  <jseymour@codesourcery.com>

	* config.sub (hexagon): Set default operating system to elf.
	* testsuite/config-sub.data: Change "hexagon" mapping to
	hexagon-unknown-elf.

2012-04-18  Joel Brobecker  <brobecker@adacore.com>

	* config.sub (*-lynx*178, *-lynx*5): New.
	* testsuite/config-sub.data: Add powerpc-elf-lynxos,
	powerpc-elf-lynxos5, powerpc-xcoff-lynxos178 testing.

2012-02-14  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	* config.guess  (aarch64:Linux:*:*, aarch64_be:Linux:*:*): New.
	* config.sub (aarch64-*, aarch64_be-*): New.
	* testsuite/config-sub.data: Add aarch64-elf, aarch64-linux
	aarch64-unknown-elf, aarch64-unknown-linux, aarch64_be-elf,
	aarch64_be-linux, aarch64_be-unknown-elf,
	aarch64_be-unknown-linux.
	* testsuite/config-guess.data: Add aarch64, aarch64_be.

2012-02-10  Paul Eggert  <eggert@cs.ucla.edu>

	Fix incorrect FSF snail mail addresses.
	* config.guess, config.sub: Replace (slightly wrong) snail mail
	addresses with a URL, as per current GNU coding standards.
	See <http://sourceware.org/bugzilla/show_bug.cgi?id=13673#c5>.

2012-02-10  Ben Elliston  <bje@gnu.org>

	Reported by thom.fitzpatrick@hp.com.
	* config.guess (x86_64:VMkernel:*:*): New.
	* testsuite/config-guess.data: Add test case.

2012-01-28  Bruno Haible  <bruno@clisp.org>
	    Ben Elliston  <bje@gnu.org>

	* config.guess: Canonicalize CPU-android-linux to CPU-unknown-
	linux-android.