@@ -1,9 +1,0 @@
-#!/bin/sh
-# uname(1) simulator, inspired by Pavel Roskin.
-
-[ $# -ne 1 ] && exec sh $0 -s
-[ $1 = -m ] && echo "@MACHINE@" && exit 0
-[ $1 = -r ] && echo "@RELEASE@" && exit 0
-[ $1 = -s ] && echo "@SYSTEM@" && exit 0
-[ $1 = -v ] && echo "@VERSION@" && exit 0
-[ $1 = -p ] && echo "Pentium III(TM)-ISA/PCI"
